# URAF

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
data/: benchmark_results.json
examples/: qwen2.5-7b-instruct-1m-config.yaml
uraf/: __init__.py  benchmark.py  benchmark_generator.py  benchmark_tracker.py  cli.py  config_loader.py  core.py  evaluate_agents.py  evaluator.py  llm_client.py  prompt_manager.py  response_processor.py  scorer.py  summary_comparator.py  topic_modeling.py
